Consume secure API & test

--- a/android-local-storage-list-views/app/src/main/res/layout/content_main.xml
+++ b/android-local-storage-list-views/app/src/main/res/layout/content_main.xml
@@ -8,4 +8,16 @@
                                                    tools:context=".android.ui.activity.MainActivity"
                                                    tools:showIn="@layout/app_bar_main">
 
+    <Button
+        android:id="@+id/testButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="onButtonClicked"
+        android:text="Test"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.213" />
 </androidx.constraintlayout.widget.ConstraintLayout>
